[gd_scene load_steps=3 format=3 uid="uid://bkpc2ohp4v5yw"]

[ext_resource type="Script" uid="uid://8kmivec100wa" path="res://source/projectiles/targetting_system.gd" id="1_yas2y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yas2y"]
resource_local_to_scene = true

[node name="TargettingSystem" type="Node2D"]
script = ExtResource("1_yas2y")

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="RangeShape" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_yas2y")
